--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,5 +1,5 @@
 body{
-    background-image: url(../../public/images/background.jpg);
+    background-image: url("../../public/images/background.jpg");
     background-size: cover;
 }
 .shade{
