--- a/src/styles/shopperstyle.css
+++ b/src/styles/shopperstyle.css
@@ -38,14 +38,19 @@ section{
     justify-content: center;
     align-items: center;
     display: grid;
-    grid-template-rows: 6fr 6fr;
+    grid-template-rows: 9fr 3fr;
 }
 .woman:hover{
     opacity:0.8;
 }
-.woman span{
-    margin-top: 110px;
-    text-shadow:  2px 2px black;
+
+.shop-all{
+    height: 50px;
+    width: 180px;
+    padding-top: 10px;
+    display: inline-block;
+    text-align: center;
+    background-color: white;
 }
 .man{
     background-image: url("../../public/images/men-fashion.jpg");
@@ -54,14 +59,18 @@ section{
     justify-content: center;
     align-items: center;
     display: grid;
-    grid-template-rows: 6fr 6fr;
+    grid-template-rows: 9fr 3fr;
 }
 .man:hover{
     opacity:0.8;
 }
-.man span{
-    margin-top: 110px;
-    text-shadow:  2px 2px black;
+.shop-all{
+    height: 50px;
+    width: 180px;
+    padding-top: 10px;
+    display: inline-block;
+    text-align: center;
+    background-color: white;
 }
 .kid{
     background-image: url("../../public/images/kid-girl.jpg");
@@ -70,13 +79,80 @@ section{
     justify-content: center;
     align-items: center;
     display: grid;
-    grid-template-rows: 6fr 6fr;
+    grid-template-rows: 9fr 3fr;
 }
 .kid:hover{
     opacity:0.8;
 }
-.kid span{
-    margin-top: 110px;
-    text-shadow:  2px 2px black;
+.shop-all{
+    height: 50px;
+    width: 180px;
+    padding-top: 10px;
+    display: inline-block;
+    text-align: center;
+    background-color: white;
 }
+/* footer style */
+footer{
+    background-color: black;
+    color:white;
+    padding:10px;
+    font-family:arial;
+}
+.footer-title{
+    text-align: center;
+    font-size: 24px;
+    padding-top:50px;
+}
+.subscribe{
+    padding-top: 30px;
+    padding-bottom: 30px;
+    text-align: center;
+}
+.email{
+    display: inline-block;
+    width:300px;
+    padding:20px;
+    background-color:rgb(60, 51, 51);
+    color:lightgray;
+    text-align:left;
+}
+.btn-subscribe{
+    display: inline-block;
+    padding: 20px;
+    text-align: center;
+    background-color: rgb(82, 72, 78);
+    margin-left: 10px;
+}
+.services{
+    padding-top: 50px;
+    padding-left: 20px;
+    padding-right: 20px;
+    padding-bottom: 50px;
+    display: grid;
+    grid-template-columns: 2.4fr 2.4fr 2.4fr 2.4fr 2.4fr;
+    text-align:center;
+}
+.footer-brand-title{
+            
+    font-size: 25px;
+    font-weight: bold;
+    padding-bottom: 15px;
+   
+}
+.service-title{
+    font-weight: bold;
+    font-size: 18px;
 
+}
+.service-title~span{
+    display: block;
+    padding-top: 5px;
+   color: rgb(179, 172, 172);
+}
+address span{
+    display: block;
+    padding-top: 5px;
+    padding-bottom: 5px;
+    color: rgb(179, 172, 172);
+}
